# qtcreator-opengl-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
